--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-markdown": "^0.4.1"
+	}
 }
